# vintalytics

./: LICENSE  README.md
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/dataset/: 20240121_20240211_20241101_194006.csv  20240414_20240519_20241101_192319.csv  2024_04_20241101_192123.csv
backend/modules/: data_loader.py  keyword_analysis.py  listings_analysis.py
backend/modules/gcloud/: classify_dataset.py  image_classifier.py
backend/src/backend/: .gitignore  README.md  main.py  pyproject.toml
backend/src/backend/dataset/: 20240121_20240211_20241101_194006.csv  20241001_20241031_20241107_122915.csv  2024_04_20241101_192123.csv  vinted_items_full.csv  vinted_items_full2023.csv
backend/src/backend/modules/: ai_price_analysis.py  data_loader.py  keyword_analysis.py  price_analysis.py
backend/src/backend/modules/gcloud/: image_classifier.py
backend/src/backend/scripts/: drop_fetch_date.py
crawler/: Dockerfile  vinted_crawler.py
frontend/: Dockerfile  bun.lockb  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  env.ts  index.css
frontend/src/components/pages/: ItemOverview.tsx
frontend/src/components/ui/: barchart.tsx  chart.tsx  command.tsx  piechart.tsx
plattform-frontend/: bun.lockb  package.json
